force-app/main/default/objects/Invoice_Line_Item__c/fields/Eligible_Asset__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Asset__c</fullName>
    <label>Eligible Asset</label>
    <referenceTo>Eligible_Asset__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>