force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Submission__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submission__c</fullName>
    <label>Invoice Submission</label>
    <referenceTo>Invoice_Submission__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>MasterDetail</type>
</CustomField>