force-app/main/default/objects/Invoice_Line_Item__c/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SKU Match</fullName><default>false</default><label>SKU Match</label></value>
            <value><fullName>No Match</fullName><default>false</default><label>No Match</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>