force-app/main/default/objects/Invoice_Line_Item__c/fields/Matched_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Product_Id__c</fullName>
    <label>Matched Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>