force-app/main/default/objects/Invoice_Line_Item__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference (SKU)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>